# ai-coding-manager

./: .chat_logs  .env.example  .gitattributes  .gitignore  AGENTS.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  LICENSE  Makefile  POST_CHANGE_CHECKLIST.md  README.md  TODO.md  VISION.md  concept_graph.json  docker-compose.yml  paper_graph.json  pyproject.toml  research_visualization.html  start.ps1  sync.ps1
.adrs/: ADR-0001_ai-development-workflow.json  ADR-0002_knowledge-archive-rag-system.json  ADR-0003_ai-assisted-development-patterns.json  ADR-0004_observability-and-debugging.json  ADR-0005_contract-discipline.json  ADR-0006_3-tier-document-model.json  ADR-0025_The-Rainstorm-Architecture.md  ADR-0026_Workflow-Builder-Panel-Architecture.md  AGENTS.md  INDEX.md  README.md
.chat_logs/: .gitignore  AI-Native Documentation Strategy.md  AICM Repo Migration.md  API Versioning and Naming ADR.md  Advanced Agent Feedback Loops.md  Author All L3 Chunks.md  Automated Research Agent System.md  CI Reference Drift Detector.md  Centralized Port Configuration.md  Code Attribution Best Practices.md  Conversation Memory Architecture.md  DAT Refactor Change Plan - GPT5.2X-HighReasoning.md  DAT Refactor Change Plan - Gemini3ProHigh.md  DAT Refactor Findings Aggregation - xAI-Grok3.md  DAT UI_UX and Adapter Design.md  DISC Summary PreRefactor for AICM.md  Debugging Graph Clipping.md  Docker Multiple Containers.md  Documentation Audit and Cleanup.md  Enhance Context Matching.md  Enhance Reference Drift Validation.md  Enhance Relationship Graph.md  Evaluate SPROMPT Execution.md  Extract AI Dev System.md  Finalizing Documentation and SPECs.md  Finalizing Tier-0 Compliance.md  Find and Use Web Scraper.md  Fixing DAT State Machine Tests.md  Formalizing Umbrella DISCs.md  Full ETL Compliance Implementation.md  GPU-Accelerated Embedding.md  Grading Chat Quality Rubrics.md  Implement First-Class Visualizations.md  Implementing Tier-0 Contracts.md  Integrate AIKH with Chat and Workflow.md  Inter-Tool AC Gap Analysis.md  Knowledge Base Sync & Embeddings.md  MCP Configs and Permissions.md  Migrate UI_UX Components.md  Optimizing Rainstorm Workflow UX.md  (+19 more)
.discussions/: DISC-0001_Frontend-Migration-From-Engineering-Tools.md  DISC-0001_Genesis-AICM-Vision.md  DISC-0002_The-Rainstorm-Workflow.md  DISC-0003_UAM-Unified-Artifact-Model.md  DISC-0004_AIKH-AI-Knowledge-Hub.md  DISC-0005_P2RE-Prompt-Response-Evaluator.md  DISC-0006_Tap-In-Protocol.md  DISC-0007_Quality-Scoring-System.md  DISC-0008_Artifact-Generation-Pipelines.md  DISC-0009_AI-Chat-Integration.md  DISC-0010_SPLAN-Super-Plan-Orchestration.md  DISC-0011_SPROMPT-Execution-Evaluation.md  DISC-0012_SPROMPT-Meta-Evaluation.md  DISC-001_Knowledge-Capture-System-Vision.md  DISC-0020_Research-Paper-Display-And-Visualization.md  DISC-0021_Automated-Research-Agent-System.md  DISC-0022_AI-Knowledge-Hub-Architecture.md  DISC-0022_Advanced-AI-Agent-Feedback-Loops.md  DISC-0024_Cross-Project-ChatLogs-Database.md  DISC-0027_Automated-Testing-Debugging-Infrastructure.md  DISC-006_Knowledge-Archive-RAG-System.md  DISC-010_Centralized-UI-UX-Design-System.md  DISC-011_Unified-Artifact-Model.md  DISC-012_Plan-Artifact-Structure-Lifecycle.md  DISC-013_Quality-Scoring-System.md  DISC-014_Primary-Chain-Validation.md  DISC-015_AI-Native-Documentation-Architecture.md  DISC-016_AI-Context-Prompt-Generator.md  DISC-017_Standalone-DevTool-Architecture.md  DISC-018_Meta-Agent-Self-Improvement-System.md  DISC-025_P2RE-Tools-Viewer-Panel.md  DISC-028_GPU-Accelerated-RAG-Containerization.md  DISC-029_Cross-Platform-Dev-Workflow-Strategy.md  DISC-030_Conversation-Memory-Architecture.md  DISC-031_AICM-Compatible-Project-Templates.md  README.md
.plans/: AGENTS.md  PLAN-0007_Multi-Provider-LLM-Adapter.md  PLAN-0008_P2RE-Trace-Pillar.md  README.md
.prompts/: ADR_CREATE_PROMPT.md  CONTRACT_CREATE_PROMPT.md  DISC_CREATE_PROMPT.md  PLAN_CREATE_PROMPT.md  SPEC_CREATE_PROMPT.md
.sessions/: README.md  (+21 more)
(+345 files in other folders)
