[project]
name = "ai-dev-orchestrator"
version = "2025.12.01"
description = "Framework for structured, AI-assisted code development with xAI integration, RAG, and observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mycahya Eggleston" }
]
keywords = ["ai", "coding", "development", "planning", "automation", "xai", "grok", "rag", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
]

[project.optional-dependencies]
# Full installation with all features
all = [
    "ai-dev-orchestrator[rag,observability,dev]",
]
# RAG/Knowledge features
rag = [
    "sentence-transformers>=2.2.0",
]
# Observability with Phoenix
observability = [
    "arize-phoenix>=4.0.0",
    "arize-phoenix-otel>=0.2.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "openinference-instrumentation-anthropic>=0.1.0",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-dev = "ai_dev_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/ai-dev-orchestrator"
Documentation = "https://github.com/your-org/ai-dev-orchestrator#readme"
Repository = "https://github.com/your-org/ai-dev-orchestrator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "D",    # pydocstyle
]
ignore = ["D100", "D104"]  # Missing docstring in public module/package

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = ["src", "."]
